--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
+    "reactjs-popup": "^2.0.4",
+    "simplebar": "^5.3.0",
+    "simplebar-react": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
